# discord_bot

./: .gitignore  Makefile  README.md  bot.py  config.py  pyproject.toml
commands/: ai.py  counting.py  history.py  humour.py
services/: ai_service.py  analytics_service.py  message_service.py
utils/: embed_builder.py  validators.py
